--- a/src/app/bsr-mobile/bsr-mobile.component.scss
+++ b/src/app/bsr-mobile/bsr-mobile.component.scss
@@ -115,8 +115,8 @@
         min-width: 330px;
         line-height: 26px;
         border-bottom: #1e41ea solid 1px;
-        opacity: 1;
-        animation: bounceInDown 0.5s ease 0.3s alternate;
+        opacity: 0;
+        animation: bounceIn 0.5s ease 0.3s forwards;
     }
 
     .names-list-card::-webkit-scrollbar {
