--- a/src/app/bsr-mobile/bsr-mobile.component.scss
+++ b/src/app/bsr-mobile/bsr-mobile.component.scss
@@ -264,7 +264,8 @@
         background-color: white;
         font-size: 8px;
         outline: none;
-        animation: heartBeat 1s ease-in-out 0.3s 1 forwards;        
+        // animation: heartBeat 1s ease-in-out 0.3s 1 forwards;   
+        z-index: 999999;     
     }
     .refreshbutton {
         color: #004684;
