--- a/src/app/mobile/mobile.component.html
+++ b/src/app/mobile/mobile.component.html
@@ -1,7 +1,7 @@
 <div class="grid-container">
-  <div class="card ⏰">⏰</div>
-  <div class="card 🧯">🧯</div>
-  <div class="card 💵">💵</div>
-  <div class="card 📆">📆</div>
-  <div class="card ❤">❤</div>
+  <div class="card ⏰" ><div class="fill">⏰</div></div>
+  <div class="card 🧯"><div class="fill">🧯</div></div>
+  <div class="card 💵"><div class="fill">💵</div></div>
+  <div class="card 📆"><div class="fill">📆</div></div>
+  <div class="card ❤"><div class="fill">❤</div></div>
 </div>
