--- a/src/app/mobile/mobile.component.scss
+++ b/src/app/mobile/mobile.component.scss
@@ -5,7 +5,7 @@
   // grid-auto-rows:78px 20px;
   gap: 5px 0px;
   height: 100vh;
-  width: 450px;
+  max-width: 450px;
   margin: auto;
   overflow: hidden;
   // display: flex;
@@ -39,7 +39,7 @@
 
 .card{
   background-color: chartreuse;
-  animation: cardEntrance 700ms ease-out, bounceInRight 1s ease-in-out;
+  animation: bounceInRight 1s ease-in-out;
   animation-fill-mode: backwards;
 }
 
