--- a/src/app/mobile/mobile.component.html
+++ b/src/app/mobile/mobile.component.html
@@ -1,7 +1,24 @@
 <div class="grid-container">
-  <div class="card ⏰" ><div class="fill mat-elevation-z8">⏰</div></div>
-  <div class="card 🧯"><div class="fill mat-elevation-z8  ">🧯</div></div>
-  <div class="card 💵"><div class="fill mat-elevation-z8 " >💵</div></div>
-  <div class="card 📆"><div class="fill mat-elevation-z8">📆</div></div>
-  <div class="card ❤"><div class="fill mat-elevation-z8">❤</div></div>
+  <div class="card ⏰">
+    <div class="fill mat-elevation-z4">
+      <img class="image-logo" src="assets/img/cv.jpg" alt="">
+      <h1 style="position: absolute; left: 138px; top: 105px;">Cesar Vega</h1>
+      <hr style="border: hotpink 2px dotted; width: 134px; position: absolute; top: 122px; left: 137px;">
+      <h1 class="" style="position: absolute; left: 138px; top: 142px;font-size: 16px;color: grey
+      ;">Software Designer</h1>
+    </div>
+
+  </div>
+  <div class="card 🧯">
+    <div class="fill mat-elevation-z4  ">🧯</div>
+  </div>
+  <div class="card 💵">
+    <div class="fill mat-elevation-z4 ">💵</div>
+  </div>
+  <div class="card 📆">
+    <div class="fill mat-elevation-z4">📆</div>
+  </div>
+  <div class="card ❤">
+    <div class="fill mat-elevation-z4">❤</div>
+  </div>
 </div>
