--- a/src/app/mobile/mobile.component.scss
+++ b/src/app/mobile/mobile.component.scss
@@ -20,6 +20,7 @@
     "📆"
     "❤";
   --stagger-delay: 100ms;
+  --border-bottom-left-radius: 80px;
 }
 
 @keyframes cardEntrance {
@@ -38,7 +39,7 @@
 .card {
   animation: bounceInRight 1s ease-in-out;
   animation-fill-mode: backwards;
-  // border-bottom-left-radius: 120px;
+  // border-bottom-left-radius: var(--border-bottom-left-radius);
 }
 
 .⏰ {
@@ -46,78 +47,91 @@
   background-color: #e17c9e;
   border-radius: 0px;
   border-bottom: #e17c9e solid 6px;
-  border-radius: 0px;
   margin: -1px;
   animation-delay: calc(1 * var(--stagger-delay));
   .fill {
-      display: flex;
-  justify-content: center;
-  align-items: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     // border-radius: 10px;
-    border-bottom-left-radius: 120px;
+    border-bottom-left-radius: var(--border-bottom-left-radius);
     background-color: white;
     width: 100%;
-    height: 120%;
+    height: 100%;
     margin: 0;
     padding: 0;
+    z-index: 2;
+    display: flex;
+    flex-direction: column-reverse;
+    justify-content: end;
+    align-items: end;
+    .image-logo {
+      width: 100px;
+      border: grey solid 3px;
+      border-radius: 50%;
+      margin: 15px 28px;
+    }
   }
 }
 .🧯 {
   grid-area: 🧯;
   background-color: #8a4db5;
+  border-radius: 0px;
+  margin: -11px;
   animation-delay: calc(2 * var(--stagger-delay));
-   .fill {
-     
-      display: flex;
-  justify-content: center;
-  align-items: center;
-    border-bottom-left-radius: 120px;
-    background-color: #e17c9e;
+  .fill {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-bottom-left-radius: var(--border-bottom-left-radius);
+    background-color: #dd799b;
+    margin-top: -1px;
     width: 100%;
     height: 100%;
+    z-index: 1;
   }
 }
 .💵 {
   grid-area: 💵;
   background-color: #150625;
   animation-delay: calc(3 * var(--stagger-delay));
-   .fill {
-    border-bottom-left-radius: 120px;
-      display: flex;
-  justify-content: center;
-  align-items: center;
+  .fill {
+    border-bottom-left-radius: var(--border-bottom-left-radius);
+    display: flex;
+    justify-content: center;
+    align-items: center;
     background-color: #8a4db5;
-    width: 100%;
+    width: 100vw;
     height: 100%;
+    margin: -1px;
   }
 }
 .📆 {
   grid-area: 📆;
-  background-color:#150625;
+  background-color: #150625;
   display: flex;
   align-items: flex-end;
   animation-delay: calc(4 * var(--stagger-delay));
-   
-   .fill {
+
+  .fill {
     display: flex;
     justify-content: center;
     align-items: center;
     border-radius: 25% 25% 0% 0%;
-    background-color:#150625;
+    background-color: #150625;
     width: 100%;
     height: 90%;
-
   }
 }
 .❤ {
   grid-area: ❤;
-  background-color:#150625;
+  background-color: #150625;
   animation-delay: calc(5 * var(--stagger-delay));
-   .fill {
-    // border-bottom-left-radius: 120px;
-      display: flex;
-  justify-content: center;
-  align-items: center;
+  .fill {
+    // border-bottom-left-radius: var(--border-bottom-left-radius);
+    display: flex;
+    justify-content: center;
+    align-items: center;
     border-radius: 30px 30px 0 0px;
     background-color: #067fd5;
     width: 100%;
