--- a/src/app/mobile/mobile.component.scss
+++ b/src/app/mobile/mobile.component.scss
@@ -19,7 +19,7 @@
     "💵"
     "📆"
     "❤";
-  --stagger-delay: 100ms;
+  --stagger-delay: 200ms;
   --border-bottom-left-radius: 80px;
 }
 
@@ -37,7 +37,8 @@
 }
 
 .card {
-  animation: bounceInRight 1s ease-in-out;
+
+  animation: bounceInRight 1s ease-in-out, CardEntrance 1s ease-in-out;
   animation-fill-mode: backwards;
   // border-bottom-left-radius: var(--border-bottom-left-radius);
 }
@@ -50,9 +51,9 @@
   margin: -1px;
   animation-delay: calc(1 * var(--stagger-delay));
   .fill {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    // display: flex;
+    // justify-content: center;
+    // align-items: center;
     // border-radius: 10px;
     border-bottom-left-radius: var(--border-bottom-left-radius);
     background-color: white;
@@ -63,8 +64,8 @@
     z-index: 2;
     display: flex;
     flex-direction: column-reverse;
-    justify-content: end;
-    align-items: end;
+    justify-content: flex-end;
+    align-items: flex-end;
     .image-logo {
       width: 100px;
       border: grey solid 3px;
