mobile grid test 8

--- a/src/app/mobile/mobile.component.html
+++ b/src/app/mobile/mobile.component.html
@@ -2,10 +2,9 @@
   <div class="card ⏰">
     <div class="fill mat-elevation-z4">
       <img class="image-logo" src="assets/img/cv.jpg" alt="">
-      <h1 style="position: absolute; left: 138px; top: 105px;">Cesar Vega</h1>
-      <hr style="border: hotpink 2px dotted; width: 134px; position: absolute; top: 122px; left: 137px;">
-      <h1 class="" style="position: absolute; left: 138px; top: 142px;font-size: 16px;color: grey
-      ;">Software Designer</h1>
+      <h1 class="name-title">Cesar Vega</h1>
+      <hr class="hr">
+      <h1 class="name-sub">Software Designer</h1>
     </div>
 
   </div>
