--- a/src/app/mobile/mobile.component.html
+++ b/src/app/mobile/mobile.component.html
@@ -1,10 +1,19 @@
 <div class="grid-container">
   <div class="card ⏰">
     <div class="fill mat-elevation-z4">
-      <img class="image-logo" src="assets/img/cv.jpg" alt="">
-      <h1 class="name-title">Cesar Vega</h1>
-      <hr class="hr">
-      <h1 class="name-sub">Software Designer</h1>
+      <div class="row">
+        <div class="col-4">
+          <img class="image-logo" src="assets/img/cv.jpg" alt="">
+
+        </div>
+        <div class="col title-group">
+          <div>
+            <h1 class="name-title">Cesar Vega</h1>
+            <hr class="hr">
+            <h1 class="name-sub">Mobile UX Designer</h1>
+          </div>
+        </div>
+      </div>
     </div>
 
   </div>
