--- a/src/app/mobile/mobile.component.html
+++ b/src/app/mobile/mobile.component.html
@@ -1,10 +1,10 @@
+<div class="container">
 <div class="grid-container">
   <div class="card ⏰">
     <div class="fill mat-elevation-z4">
       <div class="row">
         <div class="col-4">
           <img class="image-logo" src="assets/img/cv.jpg" alt="">
-
         </div>
         <div class="col title-group">
           <div>
@@ -18,10 +18,10 @@
 
   </div>
   <div class="card 🧯">
-    <div class="fill mat-elevation-z4  ">🧯</div>
+    <div class="fill mat-elevation-z4">🧯</div>
   </div>
   <div class="card 💵">
-    <div class="fill mat-elevation-z4 ">💵</div>
+    <div class="fill mat-elevation-z4">💵</div>
   </div>
   <div class="card 📆">
     <div class="fill mat-elevation-z4">📆</div>
@@ -29,4 +29,4 @@
   <div class="card ❤">
     <div class="fill mat-elevation-z4">❤</div>
   </div>
-</div>
+</div></div>
