--- a/src/app/mobile/mobile.component.html
+++ b/src/app/mobile/mobile.component.html
@@ -17,8 +17,8 @@
     </div>
 
   </div>
-  <div class="card 🧯">
-    <div class="fill mat-elevation-z4">🧯</div>
+  <div class="card 🧯" (click)="animate()">
+    <div class="fill mat-elevation-z4"><img style="width: 200px;" [src]="'assets/img/mars/' + imageIndex" alt=""></div>
   </div>
   <div class="card 💵">
     <div class="fill mat-elevation-z4">💵</div>
