--- a/src/app/mobile/mobile.component.html
+++ b/src/app/mobile/mobile.component.html
@@ -18,7 +18,7 @@
 
   </div>
   <div class="card 🧯" (click)="animate()">
-    <div class="fill mat-elevation-z4"><img style="width: 200px;" [src]="'assets/img/mars/' + imageIndex" alt=""></div>
+    <div class="fill mat-elevation-z4"><img style="width: 380px" [src]="'assets/img/mars/' + imageIndex" alt=""></div>
   </div>
   <div class="card 💵">
     <div class="fill mat-elevation-z4">💵</div>
