--- a/src/app/mobile/mobile.component.html
+++ b/src/app/mobile/mobile.component.html
@@ -1,32 +1,40 @@
 <div class="container">
-<div class="grid-container">
-  <div class="card ⏰">
-    <div class="fill mat-elevation-z4">
-      <div class="row">
-        <div class="col-4">
-          <img class="image-logo" src="assets/img/cv.jpg" alt="">
-        </div>
-        <div class="col title-group">
-          <div>
-            <h1 class="name-title">Cesar Vega</h1>
-            <hr class="hr">
-            <h1 class="name-sub">Mobile UX Designer</h1>
+  <div class="grid-container">
+    <div class="card ⏰">
+      <div class="fill mat-elevation-z4">
+        <div class="row">
+          <div class="col-4">
+            <img class="image-logo" src="assets/img/cv.jpg" alt="">
+          </div>
+          <div class="col title-group">
+            <div>
+              <h1 class="name-title">Cesar Vega</h1>
+              <hr class="hr">
+              <h1 class="name-sub">Mobile UX Designer</h1>
+            </div>
           </div>
         </div>
       </div>
-    </div>
 
+    </div>
+    <div class="card 🧯" >
+      <div class="fill mat-elevation-z4" style="display: flex;justify-content:space-around;align-items: center;flex-direction: column;">
+        <div>
+          <button class="mat-zelevation-z4" (click)="animate()" mat-raised-button>WORK</button>
+        </div>
+        <div> 
+          <img style="width: 380px" [src]="'assets/img/mars/' + imageIndex" alt="">
+        </div>
+      </div>
+    </div>
+    <div class="card 💵">
+      <div class="fill mat-elevation-z4">💵</div>
+    </div>
+    <div class="card 📆">
+      <div class="fill mat-elevation-z4">📆</div>
+    </div>
+    <div class="card ❤">
+      <div class="fill mat-elevation-z4">❤</div>
+    </div>
   </div>
-  <div class="card 🧯" (click)="animate()">
-    <div class="fill mat-elevation-z4"><img style="width: 380px" [src]="'assets/img/mars/' + imageIndex" alt=""></div>
-  </div>
-  <div class="card 💵">
-    <div class="fill mat-elevation-z4">💵</div>
-  </div>
-  <div class="card 📆">
-    <div class="fill mat-elevation-z4">📆</div>
-  </div>
-  <div class="card ❤">
-    <div class="fill mat-elevation-z4">❤</div>
-  </div>
-</div></div>
+</div>
