--- a/src/app/mobile/mobile.component.html
+++ b/src/app/mobile/mobile.component.html
@@ -20,7 +20,7 @@
     <div class="card 🧯" >
       <div class="fill mat-elevation-z4" style="display: flex;justify-content:space-around;align-items: center;flex-direction: column;">
         <div>
-          <button class="mat-zelevation-z4" (click)="animate()" mat-raised-button>WORK</button>
+          <button  class="work mat-elevation-z24" (click)="animate()" mat-raised-button>ACTION</button>
         </div>
         <div> 
           <img style="width: 380px" [src]="'assets/img/mars/' + imageIndex" alt="">
