new mobile layout gif support in progress now working on QR codes

--- a/src/app/mobile/mobile.component.html
+++ b/src/app/mobile/mobile.component.html
@@ -23,7 +23,7 @@
           <button  class="work mat-elevation-z24" (click)="animate()" mat-raised-button>ACTION</button>
         </div>
         <div> 
-          <img style="width: 380px" [src]="'assets/img/mars/' + imageIndex" alt="">
+          <img class="mars-sprite" style="width: 380px" [src]="'assets/img/mars/' + imageIndex" alt="">
         </div>
       </div>
     </div>
