--- a/src/app/bsr-mobile/bsr-mobile.component.scss
+++ b/src/app/bsr-mobile/bsr-mobile.component.scss
@@ -56,19 +56,16 @@
         animation: bounceIn 0.2s ease 0.6s backwards;
     }
 
-    .emoji-mobile-box::-webkit-scrollbar {
-        display: none;
-    }
-
     .remember-me {
         // opacity: 0;
         margin-bottom: 8px;
         // animation: jackInTheBox 1s ease 2s forwards;
     }
 
+    //desktop
     @media (min-width: 576px) {
         .names-list-card {
-            height: 450px;
+            height: 320px;
             overflow-y: scroll;
             min-width: 330px;
             line-height: 26px;
@@ -102,14 +99,13 @@
             font-size: 14px;
             margin: 7px;
             line-height: 19px;
-            overflow-y: scroll;
+
             opacity: 0;
             animation: jackInTheBox 0.3s ease 0.1s forwards;
         }
     }
-
+    //mobile
     @media (max-width: 576px) {
-
         .names-list-card {
             height: 260px;
             overflow-y: scroll;
@@ -143,10 +139,28 @@
             max-height: 220px;
             font-size: 14px;
             line-height: 19px;
-            overflow-y: scroll;
+
             opacity: 0;
             animation: jackInTheBox 0.3s ease 0.1s forwards;
         }
+    }
+
+    .emoji-mobile-box {
+        overflow: hidden;
+    }
+    .emoji-mobile-box::-webkit-scrollbar {
+        display: none;
+    }
+
+    .tab-1 {
+        overflow-y: scroll;
+        height: 300px;
+        line-height: 30px;
+        letter-spacing: -0.054em;
+    }
+
+    .tab-1::-webkit-scrollbar {
+        display: none;
     }
 
     #login {
@@ -274,8 +288,8 @@
         background-color: white;
         font-size: 8px;
         outline: none;
-        // animation: heartBeat 1s ease-in-out 0.3s 1 forwards;   
-        z-index: 999999;     
+        // animation: heartBeat 1s ease-in-out 0.3s 1 forwards;
+        z-index: 999999;
     }
     .refreshbutton {
         color: #004684;
